syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink-relay/pkg/loop/internal/pb";

package loop;

service ReportingPluginService {
  rpc NewReportingPluginFactory (NewReportingPluginFactoryRequest) returns (NewReportingPluginFactoryReply) {}
}

message ReportingPluginServiceConfig {
  string providerType = 1;
  string command = 2;
  string pluginName = 3;
  string pluginConfig = 4;
}

// NewReportingPluginFactoryRequest has arguments for [github.com/smartcontractkit/chainlink-relay/pkg/loop/reporting_plugins/LOOPPService.NewReportingPluginFactory].
message NewReportingPluginFactoryRequest {
  uint32 providerID = 1;
  uint32 errorLogID = 2;
  ReportingPluginServiceConfig ReportingPluginServiceConfig = 3;
}

// NewReportingPluginFactoryReply has return arguments for [github.com/smartcontractkit/chainlink-relay/pkg/loop/reporting_plugins/LOOPPService.NewReportingPluginFactory].
message NewReportingPluginFactoryReply {
  uint32 ID = 1;
}
